# stats_collect_srv

./: .gitignore  Cargo.toml  Dockerfile  README.md  run_it.sh
.github/workflows/: registry.yaml
src/: main.rs
