[package]
name = "stats_collect_srv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.0.0-beta.20", default-features = false, features = ["compress-gzip"] }
actix-governor = "0.3.0-beta.1"
actix-files = "0.6.0-beta.14"
chrono = "0.4.19"
clap = { version = "3.0.10", features = ["derive", "env"] }
env_logger = { version = "0.9.0", default-features = false }
lazy_static = "1.4.0"
serde = { version = "1.0.134", features = ["derive"] }
